language/move-lang/tests/move_check/typing/uninferred_type_pack.exp
error: 

   ┌── tests/move_check/typing/uninferred_type_pack.move:2:14 ───
   │
 2 │     struct S<T> {}
   │              - Is found to be a non-copyable type here
   ·
 5 │         S{};
   │         --- The type: '0x8675309::M::S<_>'
   │         ^^^ Cannot ignore resource values. The value must be used
   │

error: 

   ┌── tests/move_check/typing/uninferred_type_pack.move:5:9 ───
   │
 5 │         S{};
   │         ^^^ Could not infer this type. Try adding an annotation
   │

