language/move-lang/tests/move_check/typing/uninferred_type_pack.move
module M {
    struct S<T> {}

    fun t() {
        S{};
    }
}
